--- a/src/app/components/listar-arma/listar-arma.component.css
+++ b/src/app/components/listar-arma/listar-arma.component.css
@@ -5,3 +5,10 @@
 .pruebo{
     background-color: black;
 }
+.Center {
+    width:80%;
+    height:auto;
+    position: fixed;
+    top: 20%;
+    left: 6%;
+}
