--- a/src/app/components/crear-arma/crear-arma.component.css
+++ b/src/app/components/crear-arma/crear-arma.component.css
@@ -9,6 +9,14 @@
     color: rgb(252, 204, 46, 0.8);
     background-color: rgb(31, 29, 29);
 }
+.text2{
+    
+    border-color: rgba(252, 204, 46, 0.8);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(252, 204, 46, 0.8);
+    background-color: rgb(31, 29, 29);
+    outline:  0 none;
+    
+}
 input:focus{
     
     border-color: rgba(252, 204, 46, 0.8);
