--- a/src/app/components/crear-tirador/crear-tirador.component.html
+++ b/src/app/components/crear-tirador/crear-tirador.component.html
@@ -1,8 +1,20 @@
+
+
 <div class="container mt-5">
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
             <div class="card-body text-center">
                 <h1><span class="titulo titulo2"><strong> {{titulo | uppercase}} </strong></span></h1>
+                
+                <div>
+                    <button class="btn btn-success float-end mt-4"
+                        (click)="showB = true ; showC = false">BOMBARDERO</button>
+                    <button class="btn btn-success float-end mt-4"
+                        (click)="showB=false;showC = true ">CURADOR</button>
+                    <button class="btn btn-success float-end mt-4"
+                        (click)=" showC = false ; showB = false">TIRADOR</button>
+                </div>
+                
                 <form class="mt-3 form-control-dark" [formGroup]="tiradorForms" (ngSubmit)="agregarVehiculo()">
                     <div class="mb-3 ">
                         <input type="text" class="form-control form-control-lg focus text-color" formControlName="_codArma" placeholder="COD ARMA">
@@ -35,6 +47,14 @@
                     <div class="mb-3">
                         <input type="date" class="form-control form-control-lg  text-color" formControlName="_fechaInscripcion"
                             placeholder="FECHA INSCRIPCION">
+                    </div>
+                    <div class="mb-3" *ngIf="showB">
+                        <input type="number" class="form-control form-control-lg  text-color" formControlName="_explosivoDetonado"
+                            placeholder="EXPLOSIVO DETONADOS">
+                    </div>
+                    <div class="mb-3" *ngIf="showC">
+                        <input type="number" class="form-control form-control-lg  text-color" formControlName="_revivido"
+                            placeholder="COMPAÑEROS REVIVIDOS">
                     </div>
                     <div class="mb-3">
                         <button class="btn btn-secondary btn-lg float-start" routerLink=" ">VOLVER</button>
