--- a/src/app/components/listar-arma/listar-arma.component.html
+++ b/src/app/components/listar-arma/listar-arma.component.html
@@ -1,12 +1,12 @@
-<div class="container mt-5">
+<div class="container mt-5 Center" >
     <div class="row"></div>
-    <div class="col-lg-8 offset-lg-2">
-      <div class="card">
-        <div class="card-body text-center">
+    <div class="col-lg-8 offset-lg-2 " style="width: 80%;">
+      <div class="card" >
+        <div class="card-body text-center" >
           <span class="titulo "><strong>LISTADO DE ARMA</strong></span>
           <button class="btn btn-success float-end mt-4" routerLink="/crear-arma">NUEVO</button>
           <table *ngIf="objArmas.length > 0 " class="table table-dark table-hover mt-4 ">
-            <thead class="">
+            <thead class="" style="width: 100%;">
               <tr>
                 <th scope="col">COD</th>
                 <th scope="col">NOMBRE</th>
