--- a/src/app/components/listar-accesorio/listar-accesorio.component.html
+++ b/src/app/components/listar-accesorio/listar-accesorio.component.html
@@ -9,8 +9,8 @@
           <table  class="table table-dark table-hover mt-4 ">
             <thead class="">
               <tr>
-                <th scope="col">COD</th>
-                <th scope="col">COD</th>
+                <th scope="col">COD ARMA</th>
+                <th scope="col">COD ACCESORIO</th>
                 <th scope="col">NOMBRE</th>
                 <th scope="col">TIPO</th>
                 <th scope="col">PRECIO</th>
