--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link navbar-brand" href="/"><strong>INICIO</strong></a>
+          </li>
           <li class="nav-item nav-text-color">
-            <a class="nav-link navbar-brand"  href="/"><strong>TIRADORES</strong></a>
+            <a class="nav-link navbar-brand"  href="/listar-tirador"><strong>TIRADORES</strong></a>
           </li>
           <li class="nav-item nav-text-color">
             <a class="nav-link navbar-brand" href="/listar-accesorio"><strong>ACCESORIOS</strong></a>
