--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav text-color">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav text-color"  >
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -6,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link navbar-brand" href="/"><strong>INICIO</strong></a>
+            <a class="nav-link navbar-brand" href="/home"><strong>INICIO</strong></a>
           </li>
           <li class="nav-item nav-text-color">
             <a class="nav-link navbar-brand"  href="/listar-tirador"><strong>TIRADORES</strong></a>
